--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,27 @@
 chardet==5.2.0
 einops==0.8.0
-g2p_en==2.1.0
+g2p-en==2.1.0
 joblib==1.4.2
-librosa==0.10.2.post1
+librosa==0.11.0
 matplotlib==3.10.0
 nltk==3.9.1
-numpy==1.24.4
+numpy==1.26.4
 packaging==24.2
 pandas==2.2.3
-parselmouth==1.1.1
+praat-parselmouth
 pycwt==0.4.0b0
 pyloudnorm==0.1.1
-PyYAML==6.0.2
 PyYAML==6.0.2
 Resemblyzer==0.1.4
 scipy==1.15.1
 six==1.16.0
-skimage==0.0
+scikit-image
+tensorboard==2.9.1
 TextGrid==1.6.1
-torch==2.5.1
-torchaudio==2.5.1
+torch==2.5.1+cu118
+torchaudio==2.5.1+cu118
 tqdm==4.66.5
 transformers==4.46.0
 webrtcvad==2.0.10
-pytorch_revgrad
+pytorch_revgrad==0.2.0
+huggingface_hub[hf_xet]
